--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@syncfusion/ej2-react-calendars": "^19.4.50",
     "chart.js": "^3.3.2",
     "next": "10.2.3",
     "next-images": "^1.7.0",
     "react": "17.0.2",
+    "react-calendar": "^3.7.0",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "17.0.2",
     "sassy-datepicker": "^0.8.0"
