--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@syncfusion/ej2-react-calendars": "^19.4.50",
     "aws-sdk": "^2.1095.0",
     "chart.js": "^3.3.2",
+    "dayjs": "^1.11.0",
+    "dynamodb-to-csv": "^0.2.0",
     "next": "^12.1.0",
     "next-images": "^1.7.0",
     "react": "17.0.2",
     "react-calendar": "^3.7.0",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "17.0.2",
+    "react-papaparse": "^4.0.2",
     "sassy-datepicker": "^0.8.0"
   },
   "devDependencies": {
