--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-calendar": "^3.7.0",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "17.0.2",
+    "react-modal": "^3.14.4",
     "react-papaparse": "^4.0.2",
     "sassy-datepicker": "^0.8.0"
   },
